--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   image_picker: ^0.8.4
+  path_provider: ^2.0.3
+  path: ^1.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
