--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.8.4
   path_provider: ^2.0.3
   path: ^1.8.0
+  sqflite: ^2.0.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
