--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^2.0.3
   path: ^1.8.0
   sqflite: ^2.0.0+4
+  location: ^4.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
