--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   path: ^1.8.0
   sqflite: ^2.0.0+4
   location: ^4.3.0
+  flutter_map: ^0.13.1
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
